# My-Portfolio

./: CMakeLists.txt  README.md
CS236 PROJECT/: Automaton.h  CommentAutomata.h  Database.h  DatalogProgram.h  EternalCommentAutomata.h  EternalStringAutomata.h  Expression.h  Header.h  Interpreter.h  LeftParenAutomata.h  Lexer.cpp  Lexer.h  Parameter.h  Parser.cpp  Parser.h  PlainParameter.cpp  PlainParameter.h  Predicate.h  QuestionAutomata.h  Relation.h  Rule.h  RulesAutomata.h  StringAutomata.h  Token.cpp  Token.h  Tuple.h  main.cpp
CS236 PROJECT 1/: AddAutomata.h  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.h  CommentAutomata.h  EternalCommentAutomata.h  EternalStringAutomata.h  FactsAutomata.h  IdAutomata.h  Lexer.cpp  Lexer.h  MultiplyAutomata.h  PeriodAutomata.h  QueriesAutomata.h  RightParenAutomata.h  SchemesAutomata.h  Token.cpp  Token.h  input.txt  main.cpp
project-0-main/: .gitignore  Book.cpp  Book.h  BookCreator.cpp  BookCreator.h  BookListCreator.cpp  BookListCreator.h  Info.cpp  Info.h  Library.cpp  Library.h  README.md  main.cpp  makefile_0
project-0-main/Lab0PassOffCases/: answer0.txt  answer1.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
