cmake_minimum_required(VERSION 3.20)
project(My_Portfolio)

set(CMAKE_CXX_STANDARD 14)

include_directories("CS236 PROJECT")

add_executable(My_Portfolio
        .idea/.gitignore
        .idea/modules.xml
        .idea/My-Portfolio.iml
        .idea/vcs.xml
        .idea/workspace.xml
        "CS236 PROJECT/.idea/.name"
        "CS236 PROJECT/.idea/CS236 PROJECT 1.iml"
        "CS236 PROJECT/.idea/misc.xml"
        "CS236 PROJECT/.idea/modules.xml"
        "CS236 PROJECT/.idea/vcs.xml"
        "CS236 PROJECT/.idea/workspace.xml"
        "CS236 PROJECT/cmake-build-debug/Testing/Temporary/LastTest.log"
        "CS236 PROJECT/cmake-build-debug/cmake_install.cmake"
        "CS236 PROJECT/cmake-build-debug/CMakeCache.txt"
        "CS236 PROJECT/cmake-build-debug/CS236_PROJECT_1.cbp"
        "CS236 PROJECT/cmake-build-debug/CS236_PROJECT_1.exe"
        "CS236 PROJECT/cmake-build-debug/CS236_PROJECT_1.ilk"
        "CS236 PROJECT/cmake-build-debug/CS236_PROJECT_1.pdb"
        "CS236 PROJECT/cmake-build-debug/Makefile"
        "CS236 PROJECT/AddAutomata.h"
        "CS236 PROJECT/Automaton.h"
        "CS236 PROJECT/CMakeLists.txt"
        "CS236 PROJECT/ColonAutomaton.cpp"
        "CS236 PROJECT/ColonAutomaton.h"
        "CS236 PROJECT/ColonDashAutomaton.cpp"
        "CS236 PROJECT/ColonDashAutomaton.h"
        "CS236 PROJECT/CommaAutomaton.h"
        "CS236 PROJECT/CommentAutomata.h"
        "CS236 PROJECT/EternalCommentAutomata.h"
        "CS236 PROJECT/EternalStringAutomata.h"
        "CS236 PROJECT/Expression.cpp"
        "CS236 PROJECT/Expression.h"
        "CS236 PROJECT/FactsAutomata.h"
        "CS236 PROJECT/IdAutomata.h"
        "CS236 PROJECT/input.txt"
        "CS236 PROJECT/LeftParenAutomata.h"
        "CS236 PROJECT/Lexer.cpp"
        "CS236 PROJECT/Lexer.h"
        "CS236 PROJECT/main.cpp"
        "CS236 PROJECT/MultiplyAutomata.h"
        "CS236 PROJECT/Parameter.cpp"
        "CS236 PROJECT/Parameter.h"
        "CS236 PROJECT/Parser.cpp"
        "CS236 PROJECT/Parser.h"
        "CS236 PROJECT/PeriodAutomata.h"
        "CS236 PROJECT/PlainParameter.cpp"
        "CS236 PROJECT/PlainParameter.h"
        "CS236 PROJECT/Predicate.cpp"
        "CS236 PROJECT/Predicate.h"
        "CS236 PROJECT/QueriesAutomata.h"
        "CS236 PROJECT/QuestionAutomata.h"
        "CS236 PROJECT/RightParenAutomata.h"
        "CS236 PROJECT/Rule.cpp"
        "CS236 PROJECT/Rule.h"
        "CS236 PROJECT/RulesAutomata.h"
        "CS236 PROJECT/SchemesAutomata.h"
        "CS236 PROJECT/StringAutomata.h"
        "CS236 PROJECT/Token.cpp"
        "CS236 PROJECT/Token.h")
